[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Levels/Door.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Levels/LockedDoor.gd" type="Script" id=2]
[ext_resource path="res://Assets/GFX/PNG/Tiles/tile_463.png" type="Texture" id=3]
[ext_resource path="res://UI/NumberPad/Light_Theme.tres" type="Theme" id=4]
[ext_resource path="res://Assets/GFX/Interface/Fonts/kenvector_future_thin.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://UI/NumberPad/NumberPad.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.3834, 10 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[node name="LockedDoor" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="PlayerStopObstacle" type="StaticBody2D" parent="." index="2"]
editor/display_folded = true
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerStopObstacle" index="0"]
shape = SubResource( 1 )

[node name="Sprite" parent="." index="3"]
editor/display_folded = true
texture = ExtResource( 3 )

[node name="Light2D" parent="Sprite" index="2"]
texture = ExtResource( 3 )

[node name="ConnectedComputerLabel" type="Label" parent="." index="4" groups=[
"Labels",
]]
margin_left = -38.8485
margin_top = -0.580429
margin_right = 49.1515
margin_bottom = 78.4196
rect_min_size = Vector2( 50, 30 )
rect_rotation = -90.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
autowrap = true

[node name="UI" type="CanvasLayer" parent="." index="5"]

[node name="NumberPad" parent="UI" index="0" instance=ExtResource( 6 )]
visible = false
[connection signal="guess_correct" from="UI/NumberPad" to="." method="_on_numberPad_guess_correct"]
